--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "web2025",
   "version": "0.0.1",
   "description": "",
-  "author": "",
+  "author": "Ishchenko Vyacheslav <slavaishchenko723@gmail.com>",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
@@ -19,9 +19,13 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
+  "engines": {
+    "node": "v22.14.0"
+  },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/platform-express": "^11.0.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
@@ -30,6 +34,7 @@
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.18.0",
     "@nestjs/cli": "^11.0.0",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.1",
     "@swc/cli": "^0.6.0",
