--- a/package.json
+++ b/package.json
@@ -23,10 +23,14 @@
     "node": "v22.14.0"
   },
   "dependencies": {
+    "@fastify/static": "^8.1.1",
+    "@fastify/view": "^11.0.0",
     "@nestjs/common": "^11.0.1",
-    "@nestjs/core": "^11.0.1",
     "@nestjs/config": "^4.0.2",
+    "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
+    "handlebars": "^4.7.8",
+    "hbs": "^4.2.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
@@ -35,6 +39,7 @@
     "@eslint/js": "^9.18.0",
     "@nestjs/cli": "^11.0.0",
     "@nestjs/config": "^4.0.2",
+    "@nestjs/platform-fastify": "^11.0.20",
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.1",
     "@swc/cli": "^0.6.0",
