--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
+    "@splidejs/splide": "^4.1.4",
     "express-handlebars": "^8.0.2",
     "handlebars": "^4.7.8",
     "point-of-view": "^6.3.0",
