--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
+    "@prisma/client": "^6.6.0",
     "@splidejs/splide": "^4.1.4",
     "express-handlebars": "^8.0.2",
+    "express-session": "^1.18.1",
     "handlebars": "^4.7.8",
     "point-of-view": "^6.3.0",
     "reflect-metadata": "^0.2.2",
@@ -47,6 +49,7 @@
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
     "@types/express": "^5.0.0",
+    "@types/express-session": "^1.18.1",
     "@types/hbs": "^4.0.4",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.7",
