--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "globals": "^16.0.0",
     "hbs": "^4.2.0",
     "jest": "^29.7.0",
+    "express-session": "^1.18.0",
     "prettier": "^3.4.2",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
