--- a/package.json
+++ b/package.json
@@ -23,16 +23,24 @@
     "node": "v22.14.0"
   },
   "dependencies": {
+    "@apollo/server": "^4.12.0",
     "@fastify/static": "^8.1.1",
     "@fastify/view": "^11.0.0",
+    "@nestjs/apollo": "^13.1.0",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/graphql": "^13.1.0",
+    "@nestjs/jwt": "^11.0.0",
+    "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^11.0.1",
-    "@prisma/client": "^6.6.0",
+    "@nestjs/swagger": "^11.1.5",
+    "@prisma/client": "^6.5.0",
     "@splidejs/splide": "^4.1.4",
+    "class-validator": "^0.14.1",
     "express-handlebars": "^8.0.2",
     "express-session": "^1.18.1",
+    "graphql": "^16.11.0",
     "handlebars": "^4.7.8",
     "point-of-view": "^6.3.0",
     "reflect-metadata": "^0.2.2",
@@ -57,10 +65,10 @@
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
+    "express-session": "^1.18.0",
     "globals": "^16.0.0",
     "hbs": "^4.2.0",
     "jest": "^29.7.0",
-    "express-session": "^1.18.0",
     "prettier": "^3.4.2",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
