--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@fastify/static": "^8.1.1",
     "@fastify/view": "^11.0.0",
     "@nestjs/apollo": "^13.1.0",
+    "@nestjs/cache-manager": "^3.0.1",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
@@ -37,7 +38,10 @@
     "@nestjs/swagger": "^11.1.5",
     "@prisma/client": "^6.5.0",
     "@splidejs/splide": "^4.1.4",
+    "apollo-server-express": "^3.13.0",
+    "aws-sdk": "^2.1692.0",
     "class-validator": "^0.14.1",
+    "crc-32": "^1.2.2",
     "express-handlebars": "^8.0.2",
     "express-session": "^1.18.1",
     "graphql": "^16.11.0",
